// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The save pin action button will render with both errors 1`] = `
<ForwardRef(Fab)
  aria-label="Pin Image"
  color="#f79f9fd9"
  disabled={true}
  onClick={[MockFunction]}
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
        "mb": 1,
      },
    }
  }
  variant="extended"
>
  <Memo(ForwardRef(FileDownloadOffIcon))
    sx={
      {
        "fontSize": "1.5em",
        "mr": 1,
      }
    }
  />
  Invalid image and description
</ForwardRef(Fab)>
`;

exports[`The save pin action button will render with description error only 1`] = `
<ForwardRef(Fab)
  aria-label="Pin Image"
  color="#f79f9fd9"
  disabled={true}
  onClick={[MockFunction]}
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
        "mb": 1,
      },
    }
  }
  variant="extended"
>
  <Memo(ForwardRef(FileDownloadOffIcon))
    sx={
      {
        "fontSize": "1.5em",
        "mr": 1,
      }
    }
  />
  Invalid description
</ForwardRef(Fab)>
`;

exports[`The save pin action button will render with duplicate error only 1`] = `
<ForwardRef(Fab)
  aria-label="Pin Image"
  color="#f79f9fd9"
  disabled={true}
  onClick={[MockFunction]}
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
        "mb": 1,
      },
    }
  }
  variant="extended"
>
  <Memo(ForwardRef(FileDownloadOffIcon))
    sx={
      {
        "fontSize": "1.5em",
        "mr": 1,
      }
    }
  />
  Image URL already exists
</ForwardRef(Fab)>
`;

exports[`The save pin action button will render with image error only 1`] = `
<ForwardRef(Fab)
  aria-label="Pin Image"
  color="#f79f9fd9"
  disabled={true}
  onClick={[MockFunction]}
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
        "mb": 1,
      },
    }
  }
  variant="extended"
>
  <Memo(ForwardRef(FileDownloadOffIcon))
    sx={
      {
        "fontSize": "1.5em",
        "mr": 1,
      }
    }
  />
  Invalid image
</ForwardRef(Fab)>
`;

exports[`The save pin action button will render with no errors 1`] = `
<ForwardRef(Fab)
  aria-label="Pin Image"
  color="success"
  disabled={false}
  onClick={[MockFunction]}
  sx={
    {
      "&:disabled": {
        "backgroundColor": "success",
        "color": "white",
        "mb": 1,
      },
    }
  }
  variant="extended"
>
  <Memo(ForwardRef(SaveAltIcon))
    sx={
      {
        "fontSize": "1.5em",
        "mr": 1,
      }
    }
  />
  Save pin
</ForwardRef(Fab)>
`;

exports[`The save pin action button will render with not yet loaded error only 1`] = `
<ForwardRef(Fab)
  aria-label="Pin Image"
  color="#aa9c9cd9"
  disabled={true}
  onClick={[MockFunction]}
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#aa9c9cd9",
        "color": "white",
        "mb": 1,
      },
    }
  }
  variant="extended"
>
  <Memo(ForwardRef(FileDownloadOffIcon))
    sx={
      {
        "fontSize": "1.5em",
        "mr": 1,
      }
    }
  />
  Image loading...
</ForwardRef(Fab)>
`;
